fix: link contrast a11y

--- a/global.css
+++ b/global.css
@@ -2,7 +2,7 @@
 @font-face {
   font-family: 'DM Sans Variable';
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
   font-weight: 100 1000;
   src: url(/fonts/latin-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: 'DM Sans Variable';
   font-style: normal;
-  font-display: auto;
+  font-display: swap;
   font-weight: 100 1000;
   src: url(/fonts/latin-ext-wght-normal.woff2) format('woff2-variations');
   unicode-range: U+0100-02AF,U+0304,U+0308,U+0329,U+1E00-1E9F,U+1EF2-1EFF,U+2020,U+20A0-20AB,U+20AD-20CF,U+2113,U+2C60-2C7F,U+A720-A7FF;
@@ -29,8 +29,8 @@ body {
   --code-background: #f3f3f3;
   --brand-color: #2E3ECC;
   --code-block-background: #111;
-  --link-color: var(--brand-color);
-  --font-family-primary: 'DM Sans Variable', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  --link-color: #6573f8;
+  --font-family-primary: 'DM Sans Variable', Roboto, 'Helvetica Neue', Arial, sans-serif;
   --content-max-width: 800px;
   --content-padding-x: 24px;
   --font-normal: 1.2rem;
@@ -39,6 +39,7 @@ body {
   --font-large-line-height: 2.8rem;
   --font-small: 1rem;
   --font-small-line-height: 2rem;
+  font-family: var(--font-family-primary);
 }
 
 body.dark {
@@ -59,7 +60,6 @@ html, body {
 
 body {
   background-color: var(--background-primary);
-  font-family: var(--font-family-primary);
   color: var(--font-color-primary);
   font-size: var(--font-normal);
   line-height: var(--font-normal-line-height);
@@ -73,6 +73,7 @@ h1, h2, h3, h4, h5, h6 {
 a {
   text-decoration: none;
   color: var(--link-color);
+  font-weight: 500;
   border-bottom: 2px solid transparent;
   transition: border-bottom .2s ease;
 }
